2020-02-05  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.2-alpha08 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.2-alpha08: Vasisthasana';git push
	git tag -a 4.9.2-alpha08 -m 'ncks eliminate alarmist WARNINGS on regional grids, EASE area == 0.0 WARNINGS';git push --tags

	* nco_chk_map() check and WARNING for area_a/b == 0.0 prior to normalization to prevent unexpected divide-by-zero for EASE grid areas

	* nco_chk_map() eliminate some WARNINGs for grids not within 99% of tiling sphere

	* NCO 4.9.2-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.2-alpha07: Dandasana';git push
	git tag -a 4.9.2-alpha07 -m 'ncks chk_map msk_a/b; ncremap SAS needles+isoceles, use canonical ngl, cosine formula, crv axis/coordinates atts; ncks cori fix';git push --tags

	* Regrid (and plot with Panoply) EASE grid with aave though nco weight-generation has issues

	* nco_rgr_wgt() add "coordinates" attributes to output fields on curvilinear output grids

	* nco_rgr_wgt() omit "axis" attributes from 2-D coordinate variables per CF Conventions

	* ncremap as implemented, multiple -R options lose all but last	option. Aargh.

2020-02-04  Charlie Zender  <zender@uci.edu>

	* nco_var_min_max_ttl() change ttl_ip to ttl_dp to support large grids (this may have been unnecessary)

2020-02-03  Charlie Zender  <zender@sastrugi>

	* Unify treatment of needle-shaped and flat isoceles-shaped triangle areas (and set to zero)

	* Until today SAS formula wrongly used actual not canonical angles A, B for canonical formula

2020-01-31  Charlie Zender  <zender@sastrugi>

	* Add mask_a/b evaluations to nco_map_chk()

	* Print reason(s) for failed L'Huilier's formula

2020-01-28  Charlie Zender  <zender@sastrugi>

	* NCO 4.9.2-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.2-alpha06: Supta Baddha Konasana';git push
	git tag -a 4.9.2-alpha06 -m 'ncks chk_map dgn;ncremap ne30np2, NaN area = 0.0;index.shtml';git push --tags
